--- a/www.nass.gov.ng/ae224f87a7c7d4e459d027a62a771ab9b4416d95.yml
+++ b/www.nass.gov.ng/ae224f87a7c7d4e459d027a62a771ab9b4416d95.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 13:20:14 GMT
+    - Sat, 11 Aug 2018 03:39:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=-NU9XQ4rbgDFUL%2CAr6e3A2; path=/
+    - PHPSESSID=7kPmi%2Cow4frq-Yhd0kt5n3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 13:20:15 GMT
+recorded_at: Sat, 11 Aug 2018 03:39:22 GMT
