--- a/www.nass.gov.ng/66bb873ab3260ca61653cf69f9fd6abbb1a0e4da.yml
+++ b/www.nass.gov.ng/66bb873ab3260ca61653cf69f9fd6abbb1a0e4da.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 13:27:23 GMT
+    - Sat, 11 Aug 2018 03:47:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=8SSU5PfGN362bqEm4FVdA3; path=/
+    - PHPSESSID=TxO%2CXH7K75whWG9WwCFJs2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 13:27:23 GMT
+recorded_at: Sat, 11 Aug 2018 03:47:43 GMT
