--- a/www.nass.gov.ng/bd4c84870eb37389b14fbb7f4099407a59255042.yml
+++ b/www.nass.gov.ng/bd4c84870eb37389b14fbb7f4099407a59255042.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 13:38:07 GMT
+    - Sat, 11 Aug 2018 03:58:27 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=JskyRVV%2Cx7%2Cn27jzBLi131; path=/
+    - PHPSESSID=Rg2DPTpJOfBHOmfTHcWHx2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 13:38:08 GMT
+recorded_at: Sat, 11 Aug 2018 03:58:27 GMT
