--- a/www.nass.gov.ng/2ce9df41b63713905331afb897b45737b309cb51.yml
+++ b/www.nass.gov.ng/2ce9df41b63713905331afb897b45737b309cb51.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 09 Aug 2018 13:45:59 GMT
+    - Sat, 11 Aug 2018 04:03:50 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=TPLv99LaR4HyjTrm5zsnR1; path=/
+    - PHPSESSID=sG5pLopdM0%2Cqdq9feYedL2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 09 Aug 2018 13:45:59 GMT
+recorded_at: Sat, 11 Aug 2018 04:03:50 GMT
