--- a/www.nass.gov.ng/b710172416002a833fe14b217d8a02f83402c70b.yml
+++ b/www.nass.gov.ng/b710172416002a833fe14b217d8a02f83402c70b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 19:58:43 GMT
+    - Sat, 11 Aug 2018 08:39:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=RAEIhpV7qZtt8KiCzZgTk1; path=/
+    - PHPSESSID=TozxG%2CDPtdnIGJY2Ems4n3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 10 Aug 2018 19:58:44 GMT
+recorded_at: Sat, 11 Aug 2018 08:39:54 GMT
