--- a/www.nass.gov.ng/09f3ec474604b1abfdbf95773b652031c2a80943.yml
+++ b/www.nass.gov.ng/09f3ec474604b1abfdbf95773b652031c2a80943.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 20:01:42 GMT
+    - Sat, 11 Aug 2018 08:43:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=iNA%2CKNzykr8swX7mEifE31; path=/
+    - PHPSESSID=I74L1ZSrll35KJyLEPGJq1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 10 Aug 2018 20:01:43 GMT
+recorded_at: Sat, 11 Aug 2018 08:44:00 GMT
