--- a/www.nass.gov.ng/ee402009d629856e3b4e682d13ba7f4ddbee4016.yml
+++ b/www.nass.gov.ng/ee402009d629856e3b4e682d13ba7f4ddbee4016.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 20:07:39 GMT
+    - Sat, 11 Aug 2018 08:49:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=82Ub8XJ%2CGHas79xzXbNyn1; path=/
+    - PHPSESSID=wUceav%2CxXvVftHwtDybYS0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 20:07:39 GMT
+recorded_at: Sat, 11 Aug 2018 08:49:21 GMT
