--- a/www.nass.gov.ng/7326266957c2d4d5238ee14f904612539a415f6c.yml
+++ b/www.nass.gov.ng/7326266957c2d4d5238ee14f904612539a415f6c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 20:16:05 GMT
+    - Sat, 11 Aug 2018 08:56:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=szkPyhotzHumFavQKtnbw3; path=/
+    - PHPSESSID=CzU6IqBGq78LO9-kmG3j%2C0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 20:16:06 GMT
+recorded_at: Sat, 11 Aug 2018 08:56:55 GMT
