--- a/www.nass.gov.ng/cf58e2e74174d6b9dec472dda079e6dc09ebc9a2.yml
+++ b/www.nass.gov.ng/cf58e2e74174d6b9dec472dda079e6dc09ebc9a2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 20:18:21 GMT
+    - Sat, 11 Aug 2018 09:00:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=mkftl%2CTLLnZupJ7M8hUXo1; path=/
+    - PHPSESSID=wARAFbwS5YEf2hciOPRRy3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 20:18:21 GMT
+recorded_at: Sat, 11 Aug 2018 09:00:48 GMT
