--- a/www.nass.gov.ng/4200be907746e6a419327a7311427ccaf99e7e02.yml
+++ b/www.nass.gov.ng/4200be907746e6a419327a7311427ccaf99e7e02.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 20:35:33 GMT
+    - Sat, 11 Aug 2018 09:19:37 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=oJTUvqumAccC1K8%2CHfpz62; path=/
+    - PHPSESSID=gktQ-J3vrOCFeP1fz00ux1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 20:35:33 GMT
+recorded_at: Sat, 11 Aug 2018 09:19:37 GMT
