--- a/www.nass.gov.ng/5b9ab3dcb62bde9f303d4daba517fd628691eb44.yml
+++ b/www.nass.gov.ng/5b9ab3dcb62bde9f303d4daba517fd628691eb44.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 20:37:37 GMT
+    - Sat, 11 Aug 2018 09:21:45 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ebHisvfo7pBA94ZtA9J480; path=/
+    - PHPSESSID=ZKIF083nvlvH443pl%2CbMO1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 20:37:37 GMT
+recorded_at: Sat, 11 Aug 2018 09:21:46 GMT
