--- a/www.nass.gov.ng/6a8071ebafe4737f94e3efea9c6cd174efa06b0e.yml
+++ b/www.nass.gov.ng/6a8071ebafe4737f94e3efea9c6cd174efa06b0e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 20:45:58 GMT
+    - Sat, 11 Aug 2018 09:30:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=dnSrdcivxoPsgZoIX%2Cz3l3; path=/
+    - PHPSESSID=fsTjUMbEUZLGDQeCeeFhX0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 20:45:58 GMT
+recorded_at: Sat, 11 Aug 2018 09:30:49 GMT
