--- a/www.nass.gov.ng/7cb0d0807671276c5c4689a9e0d3600d8de2380d.yml
+++ b/www.nass.gov.ng/7cb0d0807671276c5c4689a9e0d3600d8de2380d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 20:49:57 GMT
+    - Sat, 11 Aug 2018 09:34:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=yhZFLWivQGZx8%2CYVQqARm1; path=/
+    - PHPSESSID=nDvO9HTR6z6NHAJZksPva1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 20:49:57 GMT
+recorded_at: Sat, 11 Aug 2018 09:34:33 GMT
