--- a/www.nass.gov.ng/1bfd42f0da324ea85d453b877f2cfbf092fdc275.yml
+++ b/www.nass.gov.ng/1bfd42f0da324ea85d453b877f2cfbf092fdc275.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 20:52:30 GMT
+    - Sat, 11 Aug 2018 09:37:02 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Nhmn%2C-5WbxKvf38g2a26t3; path=/
+    - PHPSESSID=kaHzSSeHKIu6KpmnFlVrH0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 20:52:30 GMT
+recorded_at: Sat, 11 Aug 2018 09:37:02 GMT
