--- a/www.nass.gov.ng/dbc6403d0cf90658e0e4aa11c6810bb4c7054cc6.yml
+++ b/www.nass.gov.ng/dbc6403d0cf90658e0e4aa11c6810bb4c7054cc6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 20:57:36 GMT
+    - Sat, 11 Aug 2018 09:42:02 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=uBz23BmhZ%2CeoKOD83ipuv1; path=/
+    - PHPSESSID=c7txqFJizb6pMLnzn7Vi52; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 20:57:37 GMT
+recorded_at: Sat, 11 Aug 2018 09:42:02 GMT
