--- a/www.nass.gov.ng/d8d5d6c3097332681f98d566f20164f401161499.yml
+++ b/www.nass.gov.ng/d8d5d6c3097332681f98d566f20164f401161499.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 21:01:30 GMT
+    - Sat, 11 Aug 2018 09:45:49 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=6eGODp0%2CUmDkPVwIJJFK02; path=/
+    - PHPSESSID=o2H9v2n2BbCfOEuzOFyOI3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 21:01:30 GMT
+recorded_at: Sat, 11 Aug 2018 09:45:49 GMT
