--- a/www.nass.gov.ng/47f96158788899dcd66d20562a2a71c35fdefc89.yml
+++ b/www.nass.gov.ng/47f96158788899dcd66d20562a2a71c35fdefc89.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 21:03:51 GMT
+    - Sat, 11 Aug 2018 09:48:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=gu0W1Jf3uizwvWu5yLxUw2; path=/
+    - PHPSESSID=OHL25Kmn59eGi-%2ChFK%2CGh1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 21:03:51 GMT
+recorded_at: Sat, 11 Aug 2018 09:48:52 GMT
