--- a/www.nass.gov.ng/29c6c421588457d93df76bd85356c4f54bc26867.yml
+++ b/www.nass.gov.ng/29c6c421588457d93df76bd85356c4f54bc26867.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 21:08:42 GMT
+    - Sat, 11 Aug 2018 09:53:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=o517f9%2CFjlyL1k7jpUuyY3; path=/
+    - PHPSESSID=AOf4aWqxviqjtLnTlNuzt0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 21:08:42 GMT
+recorded_at: Sat, 11 Aug 2018 09:53:07 GMT
