--- a/www.nass.gov.ng/44f93b030f76e3c16f6c93713690a13d24af2914.yml
+++ b/www.nass.gov.ng/44f93b030f76e3c16f6c93713690a13d24af2914.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 21:15:12 GMT
+    - Sat, 11 Aug 2018 09:59:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CpIg5-2dLPxtUA1jS3zvL3; path=/
+    - PHPSESSID=n80%2CHcsVE1YLIb7sxrgFH0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 21:15:12 GMT
+recorded_at: Sat, 11 Aug 2018 09:59:07 GMT
