--- a/www.nass.gov.ng/9769dfab9bd854ac2eb12184ddb23755935c46c6.yml
+++ b/www.nass.gov.ng/9769dfab9bd854ac2eb12184ddb23755935c46c6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 10 Aug 2018 21:16:54 GMT
+    - Sat, 11 Aug 2018 10:01:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=kSKyF5DErB5y0kL-nUM%2CK1; path=/
+    - PHPSESSID=dZ14qSCp4jJ1vpjzZCn613; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 10 Aug 2018 21:16:54 GMT
+recorded_at: Sat, 11 Aug 2018 10:01:05 GMT
