--- a/www.nass.gov.ng/2cc4b7367015853fc0196ef3ef02f84ccfd5ccd5.yml
+++ b/www.nass.gov.ng/2cc4b7367015853fc0196ef3ef02f84ccfd5ccd5.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 00:40:10 GMT
+    - Sat, 11 Aug 2018 13:37:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2C4novOS9Qpi33MkLlY8cl3; path=/
+    - PHPSESSID=RYV8WUjIAQ37ME6cz1N1g0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 00:40:10 GMT
+recorded_at: Sat, 11 Aug 2018 13:37:33 GMT
