--- a/www.nass.gov.ng/312eef1a4e73bbf80ba5f5d54d8b4e6e572e50da.yml
+++ b/www.nass.gov.ng/312eef1a4e73bbf80ba5f5d54d8b4e6e572e50da.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 01:10:22 GMT
+    - Sat, 11 Aug 2018 14:11:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=U51HQDdgppiQ91O%2CcG8RW3; path=/
+    - PHPSESSID=2AWamyXQ-BXrj51%2CCKzhV0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 01:10:22 GMT
+recorded_at: Sat, 11 Aug 2018 14:11:55 GMT
